--- a/notification-service/Dockerfile
+++ b/notification-service/Dockerfile
@@ -1,1 +1,23 @@
 FROM golang:1.24-alpine AS builder
+
+WORKDIR /app
+
+RUN apk add --no-cache git
+
+COPY go.mod go.sum ./
+RUN go mod download
+
+COPY . .
+
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+    -o notification-service ./cmd
+
+FROM alpine:3.19
+
+WORKDIR /app
+
+COPY --from=builder /app/notification-service .
+
+EXPOSE 8082
+
+CMD ["./notification-service"]
