--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -1,1 +1,24 @@
 FROM golang:1.24-alpine AS builder
+
+WORKDIR /app
+
+RUN apk add --no-cache git
+
+COPY go.mod go.sum ./
+
+RUN go mod download
+
+COPY . .
+
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+    -o order-service ./cmd
+
+FROM alpine:3.19
+
+WORKDIR /app
+
+COPY --from=builder /app/order-service .
+
+EXPOSE 8080
+
+CMD ["./order-service"]
